Jasper reporting server integration has been implemented.

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
@@ -1,7 +1,7 @@
 # General (common strings)
 GENERAL_APP_NAME = SOLA Community Server
 GENERAL_HEADER_CAPTION = SOLA COMMUNITY SERVER
-GENERAL_VERSION = 1.0
+GENERAL_VERSION = 1.3
 GENERAL_LABEL_SAVE = Save
 GENERAL_LABEL_BACK = Back
 GENERAL_LABEL_CANCEL = Cancel
@@ -52,6 +52,7 @@ MAIN_MENU_MAP = Map
 MAIN_MENU_SUPPORT = Support
 MAIN_MENU_ADMIN = Administration
 MAIN_MENU_DYNAMIC_FORMS = Dynamic forms
+MAIN_MENU_REPORTS = Reports
 
 # Login page
 LOGINPAGE_TITLE = Login
@@ -212,6 +213,7 @@ CLAIM_PAGE_ADD_DOCUMENT = Add document
 CLAIM_PAGE_SHARES = Shares
 CLAIM_PAGE_ADJACENCIES = Adjacencies
 CLAIM_PAGE_SHARE_PERCENTAGE = Percentage
+CLAIM_PAGE_ON_PUBLIC_DISPLAY = on public display
 
 # Claim search
 CLAIM_SEARCH_PAGE_TITLE = Claim search
@@ -315,3 +317,9 @@ FORMS_PAGE_FORM_SAVED = Form has been saved successfully
 # Cache
 CACHE_RESET_PAGE_TITLE = Cache reset
 CACHE_RESET_PAGE_CAHCE_RESET = Cache has been successfully reset
+
+# Reports
+REPORT_PAGE_TITLE = Report
+REPORT_PAGE_FORMAT = Format:
+REPORT_PAGE_RUN_REPORT = Run report
+REPORT_PAGE_REPORT_PARAMS = Report parameters:
