Claim certificate implemented

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
@@ -24,6 +24,7 @@ GENERAL_LABEL_UPLOAD = Upload
 GENERAL_LABEL_SUBMIT = Submit
 GENERAL_LABEL_CHALLENGE = Challenge
 GENERAL_LABEL_PRINT = Print
+GENERAL_LABEL_PRINT_CERT = Print certificate
 GENERAL_CONFIRM_DELETE = Delete record?
 GENERAL_LABEL_YES = Yes
 GENERAL_LABEL_NO = No
