Claims selection for snapping

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
@@ -253,6 +253,7 @@ MAP_CONTROL_MAXIMIZE_TITLE = Maximize map
 MAP_CONTROL_AREA = Area
 MAP_CONTROL_GOOGLE_MAP = Google Map
 MAP_CONTROL_GOOGLE_EARTH = Google Earth
+MAP_CONTROL_SNAP_SELECT = Add claims for snapping
 
 # Password restore page
 PASSWORD_RESTORE_PAGE_TITLE = Password restore
