Introducing enhancements from CS Uganda dealing with simple transactions (transfer of ownership and recording loans). Plus some refinements to the sample reports.

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
@@ -25,9 +25,29 @@ GENERAL_LABEL_SUBMIT = Submit
 GENERAL_LABEL_CHALLENGE = Challenge
 GENERAL_LABEL_PRINT = Print
 GENERAL_LABEL_PRINT_CERT = Print certificate
+GENERAL_LABEL_ISSUE = Issue
 GENERAL_CONFIRM_DELETE = Delete record?
 GENERAL_LABEL_YES = Yes
 GENERAL_LABEL_NO = No
+GENERAL_LABEL_TRANSFER = Transfer
+GENERAL_LABEL_HISTORY = History
+GENERAL_LABEL_REG_DATE = Reg. date
+GENERAL_LABEL_TERMINATION_DATE = Termination date
+GENERAL_LABEL_REG_MORTGAGE = Record Loan
+GENERAL_LABEL_RESTRICTIONS = Restrictions
+GENERAL_LABEL_RESTRICTION_TYPE = Restriction type
+GENERAL_LABEL_MORTGAGE = Recorded Loan
+GENERAL_LABEL_MORTGAGES = Loans
+GENERAL_LABEL_AMOUNT = Amount
+GENERAL_LABEL_START_DATE = Start of payment
+GENERAL_LABEL_END_DATE = End date
+GENERAL_LABEL_INTEREST_RATE = Interest rate
+GENERAL_LABEL_LENDERS = Lenders
+GENERAL_LABEL_LENDER = Lender
+GENERAL_LABEL_TERMINATE = Terminate
+GENERAL_LABEL_STATUS_HISTORIC = Historic
+GENERAL_LABEL_STATUS_ACTIVE = Active
+GENERAL_LABEL_REGISTER = Record
 
 # Header template
 HEADER_LOGIN = Login
@@ -120,6 +140,7 @@ CLAIM_PAGE_DESCRIPTION = Description
 CLAIM_PAGE_LODGEMENT_DATE = Lodgement date
 CLAIM_PAGE_CHALLENGE_EXPIRATION = Challenge expiration
 CLAIM_PAGE_DECISION_DATE = Decision date
+CLAIM_PAGE_ISSUANCE_DATE = Issuance date
 CLAIM_PAGE_STATUS = Status
 CLAIM_PAGE_RECORDER = Recorder
 CLAIM_PAGE_CHALLENGED_CLAIM = Challenged claim
@@ -145,6 +166,7 @@ CLAIM_PAGE_DOCUMENT_SIZE = Size
 CLAIM_PAGE_DELETE_WARNING = Are you sure you want to delete claim?\\r\\nAll data will be lost.
 CLAIM_PAGE_DELETE = delete
 CLAIM_PAGE_OWNERS = Owners
+CLAIM_PAGE_NEW_OWNERS = New owners
 CLAIM_PAGE_OWNER = Owner
 CLAIM_PAGE_SHARE = Share
 CLAIM_PAGE_APPROVE_REVIEW = Approve review
@@ -201,6 +223,7 @@ CLAIM_PAGE_REJECTION_REASON = Rejection reason
 CLAIM_PAGE_HIDDEN = hidden
 CLAIM_PAGE_SUBMITTED = Claim has been submitted
 CLAIM_PAGE_REVERTED = Claim review has been reverted
+CLAIM_PAGE_ISSUED = Claim has been issued
 CLAIM_PAGE_COPY_FROM_CLAIMANT = Copy claimant
 CLAIM_PAGE_PARCEL = Parcel
 CLAIM_PAGE_RIGHT_TYPE = Right type
@@ -215,6 +238,7 @@ CLAIM_PAGE_SHARES = Shares
 CLAIM_PAGE_ADJACENCIES = Adjacencies
 CLAIM_PAGE_SHARE_PERCENTAGE = Percentage
 CLAIM_PAGE_ON_PUBLIC_DISPLAY = on public display
+CLAIM_PAGE_RIGHTS_TRANSFERRED = Ownership rights have been transferred
 
 # Claim search
 CLAIM_SEARCH_PAGE_TITLE = Claim search
@@ -325,3 +349,21 @@ REPORT_PAGE_TITLE = Report
 REPORT_PAGE_FORMAT = Format:
 REPORT_PAGE_RUN_REPORT = Run report
 REPORT_PAGE_REPORT_PARAMS = Report parameters:
+
+
+# Recorded Loans
+MORTGAGE_CONFIRM_TERMINATE = After termination this loan will receive historic status.\\r\\nDo you want to continue?
+MORTGAGE_DETAILS = Loan details
+MORTGAGE_REGISTERED = Loan has been successfully registered.
+
+# Claims merge
+CLAIMS_MERGE_TITLE = Claims merge
+CLAIMS_MERGE_CLAIMS_TO_MERGE = Claims to merge
+CLAIMS_MERGE_NEW_CLAIMS = New claims
+CLAIMS_MERGE_SUCCESS = Claims have been successfully merged. Click on the claims below to review the result.
+CLAIMS_MERGE_CONFIRM = Are you sure? Old claims will become historic.
+
+# Claim split
+CLAIM_SPLIT_TITLE = Claim split
+CLAIM_SPLIT_CLAIM_TO_SPLIT = Claim to split
+CLAIM_SPLIT_SUCCESS = Claim has been successfully split. Click on the claims below to review the result.
