New features introduced - boundary management, map search, boundary printing, public display printing

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
@@ -48,6 +48,7 @@ GENERAL_LABEL_TERMINATE = Terminate
 GENERAL_LABEL_STATUS_HISTORIC = Historic
 GENERAL_LABEL_STATUS_ACTIVE = Active
 GENERAL_LABEL_REGISTER = Record
+GENERAL_LABEL_OK = OK
 
 # Header template
 HEADER_LOGIN = Login
@@ -74,6 +75,10 @@ MAIN_MENU_SUPPORT = Support
 MAIN_MENU_ADMIN = Administration
 MAIN_MENU_DYNAMIC_FORMS = Dynamic forms
 MAIN_MENU_REPORTS = Reports
+MAIN_MENU_BOUNDARIES = Boundaries
+MAIN_MENU_LIST = List
+MAIN_MENU_PUBLIC_DISPLAY_MAP = Public Display (Map)
+MAIN_MENU_PUBLIC_DISPLAY_OWNERS = Public Display (Owners)
 
 # Login page
 LOGINPAGE_TITLE = Login
@@ -176,7 +181,7 @@ CLAIM_PAGE_ASSIGN_WARNING = You are going to assign this claim to your name.\\r\
 CLAIM_PAGE_APPROVE_REVIEW_WARNING = You are going to approve review of this claim.\\r\\nDo you want to continue?
 CLAIM_PAGE_REVERT_REVIEW_WARNING = You are going to revert review of this claim.\\r\\nDo you want to continue?
 CLAIM_PAGE_SUBMIT_WARNING = You are going to submit claim for public review.\\r\\nDo you want to continue?
-CLAIM_PAGE_APPROVE_MODERATION_WARNING = You are going to approve moderation of this claim.\\r\\nAfter this action, not further changes will be possible.\\r\\nDo you want to continue?
+CLAIM_PAGE_APPROVE_MODERATION_WARNING = You are going to approve moderation of this claim.\\r\\nAfter this action, no further changes will be possible.\\r\\nDo you want to continue?
 CLAIM_PAGE_REJECT_WARNING = You are going to reject this claim.\\r\\nBefore rejection, don\\'t forget to add comment, describing the reason.\\r\\nNo further changes will be possible. Do you want to continue?
 CLAIM_PAGE_WITHDRAW_WARNING = You are going to withdraw this claim.\\r\\nNo further changes will be possible. Do you want to continue?
 CLAIM_PAGE_UNASSIGN_WARNING = You are going to unassign this claim.\\r\\nDo you want to continue?
@@ -239,6 +244,7 @@ CLAIM_PAGE_ADJACENCIES = Adjacencies
 CLAIM_PAGE_SHARE_PERCENTAGE = Percentage
 CLAIM_PAGE_ON_PUBLIC_DISPLAY = on public display
 CLAIM_PAGE_RIGHTS_TRANSFERRED = Ownership rights have been transferred
+CLAIM_PAGE_LOCATION = Location
 
 # Claim search
 CLAIM_SEARCH_PAGE_TITLE = Claim search
@@ -248,14 +254,14 @@ MAP_PAGE_TITLE = Map
 
 # Map control
 MAP_CONTROL_LOADING = Loading...
-MAP_CONTROL_CLAIM_NOT_FOUND = Claim not found
-MAP_CONTROL_CLAIM_INFO = Claim information
+MAP_CONTROL_NOTHING_FOUND = Nothing was found
+MAP_CONTROL_INFO = Information
 MAP_CONTROL_CLAIMANT = Claimant:
 MAP_CONTROL_LODGED = Lodged:
 MAP_CONTROL_STATUS = Status:
 MAP_CONTROL_LOCATIONS_LAYER_TITLE = Additional locations
 MAP_CONTROL_CURRENT_CLAIM = Current claim
-MAP_CONTROL_COMMUNITY_LAYER_NAME = Community area
+MAP_CONTROL_COMMUNITY_LAYER_NAME = Community Area
 MAP_CONTROL_LAYERS = Layers
 MAP_CONTROL_ZOOM_TO_EXTENT = Zoom to extent
 MAP_CONTROL_ZOOM_IN = Zoom in
@@ -277,7 +283,11 @@ MAP_CONTROL_MAXIMIZE_TITLE = Maximize map
 MAP_CONTROL_AREA = Area
 MAP_CONTROL_GOOGLE_MAP = Google Map
 MAP_CONTROL_GOOGLE_EARTH = Google Earth
-MAP_CONTROL_SNAP_SELECT = Add claims for snapping
+MAP_CONTROL_BING_AREAL = Bing Areal
+MAP_CONTROL_SNAP_SELECT = Add to snapping
+MAP_CONTROL_CURRENT_BOUNDARY = Current boundary
+MAP_CONTROL_TYPE = Type
+MAP_CONTROL_PARENT = Parent
 
 # Password restore page
 PASSWORD_RESTORE_PAGE_TITLE = Password restore
@@ -367,3 +377,33 @@ CLAIMS_MERGE_CONFIRM = Are you sure? Old claims will become historic.
 CLAIM_SPLIT_TITLE = Claim split
 CLAIM_SPLIT_CLAIM_TO_SPLIT = Claim to split
 CLAIM_SPLIT_SUCCESS = Claim has been successfully split. Click on the claims below to review the result.
+
+
+
+BOUNDARIES_PAGE_TITLE = Boundaries List
+BOUNDARIES_PAGE_NAME = Name
+BOUNDARIES_PAGE_AUTHORITY = Authority
+BOUNDARIES_PAGE_TYPE = Type
+BOUNDARIES_PAGE_PARENT = Parent Boundary
+
+BOUNDARY_PAGE_TITLE = %s %s Boundary
+BOUNDARY_PAGE_TITLE_NEW = Boundary - New
+BOUNDARY_PAGE_SAVED = Boundary has been saved successfully
+BOUNDARY_PAGE_APPROVED = Boundary has been approved
+BOUNDARY_PAGE_DELETED = Boundary has been deleted
+BOUNDARY_PAGE_APPROVE = Approve
+BOUNDARY_PAGE_APPROVE_WARNING = You are going to approve boundary.\\r\\nAfter this action, no further changes will be possible.\\r\\nDo you want to continue?
+BOUNDARY_PAGE_DELETE_WARNING = You are going to delete boundary.\\r\\nAfter this action, boundary information will be lost.\\r\\nDo you want to continue?
+
+BOUNDARY_PRINT_PAGE_MAP_PARAMS = Map Parameters
+BOUNDARY_PRINT_PAGE_PAPER_SIZE = Paper Size
+BOUNDARY_PRINT_PAGE_ORIENTATION = Orientation
+BOUNDARY_PRINT_PAGE_PORTRAIT = Portrait
+BOUNDARY_PRINT_PAGE_LANDSCAPE = Landscape
+BOUNDARY_PRINT_PAGE_PRINT_WHEN_READY = Print when map is ready
+
+# Public display print page
+PUBLIC_DISPLAY_PAGE_TITLE = Public display
+PUBLIC_DISPLAY_PAGE_CLAIMS_BY = Show claims by:
+PUBLIC_DISPLAY_PAGE_ALL = All
+PUBLIC_DISPLAY_PAGE_PRINT_PARAMS = Printing parameters
