Boundary map print improved

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
@@ -401,6 +401,12 @@ BOUNDARY_PRINT_PAGE_ORIENTATION = Orientation
 BOUNDARY_PRINT_PAGE_PORTRAIT = Portrait
 BOUNDARY_PRINT_PAGE_LANDSCAPE = Landscape
 BOUNDARY_PRINT_PAGE_PRINT_WHEN_READY = Print when map is ready
+BOUNDARY_PRINT_PAGE_BOUNDARY_COLOR = Boundary Shown in Red
+BOUNDARY_PRINT_PAGE_LOCATION_OF = Location Map of the %s
+BOUNDARY_PRINT_PAGE_BEACON = Beacon
+BOUNDARY_PRINT_PAGE_BOUNDARY = Boundary
+BOUNDARY_PRINT_PAGE_X = X
+BOUNDARY_PRINT_PAGE_Y = Y
 
 # Public display print page
 PUBLIC_DISPLAY_PAGE_TITLE = Public display
