Further refinements to Samoa CS Localization

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors_sm_WS.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/errors_sm_WS.properties
@@ -1,5 +1,5 @@
 #
-#Sun Feb 16 10:25:21 NZDT 2020
+#Sun Feb 16 15:11:08 NZDT 2020
 ATTACHMENT_BAD_DOC_DATE=Wrong document date
 ATTACHMENT_FAILED_TO_ATTACH=Failed to attach document
 ATTACHMENT_SELECT_DOOCUMENT_TYPE=Select document type
@@ -8,32 +8,32 @@ BOUNDARY_EDIT_NOT_ALLOWED=Boundary can't be edited. Make sure you have sufficien
 CLAIMS_MERGE_COUNT=For land use merge, there must be at least 2 recordings to merge and 1 new recording as a result of merge.
 CLAIM_ALREADY_IN_LIST=Recording was already added to the list
 CLAIM_CHALLENGED_CLAIM_CANT_CHALLENGED=Challenged recording can't be challenged. Check recording status
-CLAIM_CHALLENGED_CLAIM_NOT_FOUND=Challenged claim was not found
+CLAIM_CHALLENGED_CLAIM_NOT_FOUND=Challenged recording was not found
 CLAIM_CHALLENGE_EXPIRATION_DATE_REQUIRED=Challenge expiry date is required
 CLAIM_CLAIMANT_GENDER_REQUIERD=Gender is required
 CLAIM_CLAIMANT_NAME_REQUIRED=Land user name is required
 CLAIM_CLAIMANT_REQUIRED=Land user is required
 CLAIM_CLAIMANT_TYPE_REQUIRED=Land user type is required
 CLAIM_EDIT_NOT_ALLOWED=Recording can't be edited. Make sure you have sufficient rights and that recording status is appropriate
-CLAIM_FAILED_TO_APPROVE_MODERATION=Failed to approve claim validation
+CLAIM_FAILED_TO_APPROVE_MODERATION=Failed to approve community validation
 CLAIM_FAILED_TO_APPROVE_REVIEW=Failed to approve recording review
 CLAIM_FAILED_TO_ASSIGN=Failed to assign recording
 CLAIM_FAILED_TO_DELETE=Failed to delete recording
 CLAIM_FAILED_TO_DELETE_ATTACHMENT=Failed to delete attachment
 CLAIM_FAILED_TO_DELETE_COMMENT=Failed to delete comment
 CLAIM_FAILED_TO_REJECT=Failed to reject recording
-CLAIM_FAILED_TO_SAVE=Failed to save claim
+CLAIM_FAILED_TO_SAVE=Failed to save recording
 CLAIM_FAILED_TO_SAVE_COMMENT=Failed to save recording comment
-CLAIM_FAILED_TO_SUBMIT=Failed to submit claim
+CLAIM_FAILED_TO_SUBMIT=Failed to submit recording
 CLAIM_FAILED_TO_UNASSIGN=Failed to unassign recording
-CLAIM_FAILED_TO_WITHDRAW=Failed to withdraw claim
-CLAIM_HAS_RESTRICTIONS=Selected claim has recorded restrictions. They must be terminated first.
+CLAIM_FAILED_TO_WITHDRAW=Failed to withdraw recording
+CLAIM_HAS_RESTRICTIONS=Selected recording has recorded restrictions. They must be terminated first.
 CLAIM_LAND_USE_REQUIRED=Land use is required
 CLAIM_MANAGE_MORTGAGES_ALLOWED=Recording of loans is not possible. Make sure you have sufficient rights and recording status is appropriate
 CLAIM_MAPPED_GEOMETRY_REQUIRED=Geometry is required
 CLAIM_MUST_BE_MODERATED=Selected recording must have Validated status
 CLAIM_NAME_REQUIRED=Name is required
-CLAIM_NOT_FOUND=Claim not+C3905+C3916
+CLAIM_NOT_FOUND=Recording not found.
 CLAIM_OWNER_NAME_REQUIRED=Owner name is required
 CLAIM_OWNER_TYPE_REQUIRED=Owner type is required
 CLAIM_REJECTION_REASON_REQUIRED=Rejection reason is required
@@ -51,7 +51,7 @@ CLAIM_TRANSFER_NOT_ALLOWED=Land use right can't be transferred. Make sure you ha
 CLAIM_TYPE_REQUIRED=Recording type is required
 CLAIM_UPLOAD_ATTACHMENT_NOT_FOUND=Attachment file "%s" not found.
 CLAIM_UPLOAD_BAD_FOLDER_STRUCTURE=Incorrect recording folder structure. 
-CLAIM_UPLOAD_FILE_REQUIERD=Claim zip file is required. 
+CLAIM_UPLOAD_FILE_REQUIERD=Recording zip file is required. 
 CLAIM_UPLOAD_JSON_NOT_FOUND=Json file not found.
 CLAIM_UPLOAD_ZIP_EXTRACTION_FAILED=Failed to extract files from archive. Make sure archive is not broken. If file is protected with password, make sure you have provided correct password. 
 FORMS_PAGE_ADD_1_FIELD=Add at least 1 field into section %s
@@ -63,7 +63,7 @@ FORMS_PAGE_FILL_ERROR_MESSAGE=- Fill in error message
 FORMS_PAGE_FILL_FORM_NAME_AND_DISPLAY_NAME=Fill in form name and display name
 FORMS_PAGE_FILL_HINT=- Fill in hint
 FORMS_PAGE_FILL_NAME=- Fill in name
-FORMS_PAGE_FORM_HAS_PAYLOAD=Form template cannot be deleted because it has related claim records.
+FORMS_PAGE_FORM_HAS_PAYLOAD=Form template cannot be deleted because it has related recording records.
 FORMS_PAGE_MIN_OCCUR_GRATER_MAX_OCCUR=- Minimum occurrence should not be grater than maximum occurrence
 FORMS_PAGE_SELECT_FIELD_CONSTRAINT_TYPE=- Select field constraint type
 FORMS_PAGE_SELECT_FIELD_TYPE=- Select field type
@@ -71,7 +71,7 @@ GENERAL_ERROR_LIST_HEADER=Form Submission was not successful. Please review and 
 GENERAL_INSUFFICIENT_RIGHTS=You don't have rights to access this page
 GENERAL_REDIRECT_FAILED=Failed to redirect
 GENERAL_UNEXPECTED_ERROR=Unexpected errors have occurred while executing requested action
-LOGIN_ACCOUNT_BLOCKED=Your account is not active. If you just registered, you need to activate it first.
+LOGIN_ACCOUNT_BLOCKED=Your account is not active. If you just enrolled, you need to activate it first.
 LOGIN_FAILED=Login failed
 LOGIN_LOGOUT_FAILED=Logout failed
 LOGIN_PASSWORD_REQUIRED=Provide password
