Corrections to Samoa localisation
CorreCorrections to Samoa localisation

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages_sm_WS.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages_sm_WS.properties
@@ -1,5 +1,5 @@
 #
-#Sun Feb 16 15:11:08 NZDT 2020
+#Sun May 03 09:28:14 NZST 2020
 BOUNDARIES_PAGE_AUTHORITY=Authority
 BOUNDARIES_PAGE_NAME=Name
 BOUNDARIES_PAGE_PARENT=Parent Boundary
@@ -27,7 +27,7 @@ BOUNDARY_PRINT_PAGE_X=X
 BOUNDARY_PRINT_PAGE_Y=Y
 CACHE_RESET_PAGE_CAHCE_RESET=Cache has been successfully reset
 CACHE_RESET_PAGE_TITLE=Cache reset
-CLAIMS_MERGE_CLAIMS_TO_MERGE=Land Uses to merge
+CLAIMS_MERGE_CLAIMS_TO_MERGE=Claims to merge
 CLAIMS_MERGE_CONFIRM=Are you sure? Old recordings will become historic.
 CLAIMS_MERGE_NEW_CLAIMS=New recordings
 CLAIMS_MERGE_SUCCESS=Recordings have been successfully merged. Click on the recordings below to review the result.
@@ -41,9 +41,9 @@ CLAIM_PAGE_ADD_PERSON=Add person
 CLAIM_PAGE_ADD_SHARE=Add share
 CLAIM_PAGE_ADJACENCIES=Adjacencies
 CLAIM_PAGE_APPROVED_FOR_REVIEW=Recording review has been approved
-CLAIM_PAGE_APPROVED_MODERATION=Community validation has been approved
+CLAIM_PAGE_APPROVED_MODERATION=Claim validation has been approved
 CLAIM_PAGE_APPROVE_MODERATION=Approve validation
-CLAIM_PAGE_APPROVE_MODERATION_WARNING=You are going to approve moderation of this recording.\\r\\nAfter this action, no further changes will be possible.\\r\\nDo you want to continue?
+CLAIM_PAGE_APPROVE_MODERATION_WARNING=You are going to approve moderation of this claim.\\r\\nAfter this action, no further changes will be possible.\\r\\nDo you want to continue?
 CLAIM_PAGE_APPROVE_REVIEW=Approve review
 CLAIM_PAGE_APPROVE_REVIEW_WARNING=You are going to approve review of this recording.\\r\\nDo you want to continue?
 CLAIM_PAGE_ASSIGNED_TO_YOU=Recording has been assigned to you
@@ -51,12 +51,12 @@ CLAIM_PAGE_ASSIGNEE=Assigned person
 CLAIM_PAGE_ASSIGN_WARNING=You are going to assign this recording to your name.\\r\\nDo you want to continue?
 CLAIM_PAGE_ATTACHMENT=Attachment
 CLAIM_PAGE_ATTACHMENTS=Attachments
-CLAIM_PAGE_CHALLENGED_CLAIM=Challenged recording
+CLAIM_PAGE_CHALLENGED_CLAIM=Challenged claim
 CLAIM_PAGE_CHALLENGE_EXPIRATION=Challenge expiration
 CLAIM_PAGE_CHALLENGE_TITLE=Recording challenge \#%s
 CLAIM_PAGE_CHALLENGING_CLAIMS=Challenging recordings
 CLAIM_PAGE_CLAIM=Recording
-CLAIM_PAGE_CLAIMANT=Land user
+CLAIM_PAGE_CLAIMANT=Contact person
 CLAIM_PAGE_CLAIMANT_ADDRESS=Address
 CLAIM_PAGE_CLAIMANT_BIRTHDAY=Date of birth
 CLAIM_PAGE_CLAIMANT_EMAIL=Email
@@ -68,7 +68,7 @@ CLAIM_PAGE_CLAIMANT_LAST_NAME=Last name
 CLAIM_PAGE_CLAIMANT_MOBILE_PHONE_NUMBER=Mobile phone
 CLAIM_PAGE_CLAIMANT_NAME=Name
 CLAIM_PAGE_CLAIMANT_PHONE_NUMBER=Phone
-CLAIM_PAGE_CLAIM_NAME=Land name
+CLAIM_PAGE_CLAIM_NAME=Claim name
 CLAIM_PAGE_CLAIM_TYPE=Recording type
 CLAIM_PAGE_COMMENT=Comment
 CLAIM_PAGE_COMMENTS=Comments
@@ -119,7 +119,7 @@ CLAIM_PAGE_PERSON=Person
 CLAIM_PAGE_PRINT_GENERATED_ON=generated on\:
 CLAIM_PAGE_RECORDER=Recorder
 CLAIM_PAGE_REGISTRATION_NUMBER=Recording number
-CLAIM_PAGE_REJECTED=Recording has been rejected
+CLAIM_PAGE_REJECTED=Claim has been rejected
 CLAIM_PAGE_REJECTION_REASON=Rejection reason
 CLAIM_PAGE_REJECT_CLAIM=Reject recording
 CLAIM_PAGE_REJECT_WARNING=You are going to reject this recording.\\r\\nBefore rejection, don\\'t forget to add comment, describing the reason.\\r\\nNo further changes will be possible. Do you want to continue?
@@ -128,13 +128,13 @@ CLAIM_PAGE_REVERT_REVIEW=Revert review
 CLAIM_PAGE_REVERT_REVIEW_WARNING=You are going to revert review of this recording.\\r\\nDo you want to continue?
 CLAIM_PAGE_RIGHTS_TRANSFERRED=Land user rights have been transferred
 CLAIM_PAGE_RIGHT_TYPE=Right type
-CLAIM_PAGE_SAVED=Recording has been saved
+CLAIM_PAGE_SAVED=Claim has been saved
 CLAIM_PAGE_SHARE=Share
 CLAIM_PAGE_SHARES=Shares
 CLAIM_PAGE_SHARE_PERCENTAGE=Percentage
 CLAIM_PAGE_SIGNATURE=Signature
 CLAIM_PAGE_SOUTH_ADJACENCY=South adjacency
-CLAIM_PAGE_START_DATE=Land use began
+CLAIM_PAGE_START_DATE=Occupied since
 CLAIM_PAGE_STATUS=Status
 CLAIM_PAGE_SUBMITTED=Recording has been submitted
 CLAIM_PAGE_SUBMIT_WARNING=You are going to submit recording for community review.\\r\\nDo you want to continue?
@@ -152,8 +152,8 @@ CLAIM_SEARCH_LODGING_DATE=Lodgement date
 CLAIM_SEARCH_LODGING_DATE_FROM=Lodgement date (from)
 CLAIM_SEARCH_LODGING_DATE_TO=Lodgement date (to)
 CLAIM_SEARCH_NOTHING_FOUND=Nothing was found. Please, refine your search criteria.
-CLAIM_SEARCH_NUMBER=Recording \#
-CLAIM_SEARCH_PAGE_TITLE=Recording search
+CLAIM_SEARCH_NUMBER=Claim \#
+CLAIM_SEARCH_PAGE_TITLE=Claim search
 CLAIM_SPLIT_CLAIM_TO_SPLIT=Recording to split
 CLAIM_SPLIT_SUCCESS=Recording has been successfully split. Click on the recordings below to review the result.
 CLAIM_SPLIT_TITLE=Recording split
@@ -167,7 +167,7 @@ DASHBOARD_PAGE_CLAIMS_FOR_MODERATION=For moderation
 DASHBOARD_PAGE_CLAIMS_FOR_MODERATION_EMPTY=Recordings for validation not found
 DASHBOARD_PAGE_CLAIMS_FOR_REVIEW=For review
 DASHBOARD_PAGE_CLAIMS_FOR_REVIEW_EMPTY=Recordings for review not found
-DASHBOARD_PAGE_MY_CLAIMS=My recordings
+DASHBOARD_PAGE_MY_CLAIMS=My claims
 DASHBOARD_PAGE_SHOW_ASSIGNED=Show assigned
 DASHBOARD_PAGE_TITLE=Dashboard
 ERRORPAGE_TITLE=Error
@@ -273,10 +273,10 @@ MAIN_MENU_LIST=List
 MAIN_MENU_MAP=Map
 MAIN_MENU_MY_CLAIMS=My recordings
 MAIN_MENU_NEW=New
-MAIN_MENU_NEW_REGISTRATION=New User
+MAIN_MENU_NEW_REGISTRATION=New registration
 MAIN_MENU_PUBLIC_DISPLAY_MAP=Community Display (Map)
 MAIN_MENU_PUBLIC_DISPLAY_OWNERS=Public Display (Owners)
-MAIN_MENU_REGISTRATION=User Enrolment
+MAIN_MENU_REGISTRATION=Recording
 MAIN_MENU_REPORTS=Reports
 MAIN_MENU_SEARCH=Search
 MAIN_MENU_SUPPORT=Support
@@ -317,7 +317,7 @@ MAP_CONTROL_ZOOM_IN=Zoom in
 MAP_CONTROL_ZOOM_OUT=Zoom out
 MAP_CONTROL_ZOOM_TO_EXTENT=Zoom to extent
 MAP_PAGE_TITLE=Map
-MAYCLAIMS_PAGE_TITLE=My recordings
+MAYCLAIMS_PAGE_TITLE=My claims
 MORTGAGE_CONFIRM_TERMINATE=After termination this loan will receive historic status.\\r\\nDo you want to continue?
 MORTGAGE_DETAILS=Loan details
 MORTGAGE_REGISTERED=Loan has been successfully recorded
@@ -352,7 +352,7 @@ REGISTRATIONPAGE_EMAIL=Email
 REGISTRATIONPAGE_FIRST_NAME=First name
 REGISTRATIONPAGE_LAST_NAME=Last name
 REGISTRATIONPAGE_MOBILE=Mobile phone number
-REGISTRATIONPAGE_REGISTER=Enrol
+REGISTRATIONPAGE_REGISTER=Record
 REGISTRATIONPAGE_TITLE=Registration
 REPORT_PAGE_FORMAT=Format\:
 REPORT_PAGE_REPORT_PARAMS=Report parameters\:
