--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
@@ -75,7 +75,7 @@ MAIN_MENU_SUPPORT = Support
 MAIN_MENU_ADMIN = Administration
 MAIN_MENU_DYNAMIC_FORMS = Dynamic forms
 MAIN_MENU_REPORTS = Reports
-MAIN_MENU_BOUNDARIES = Boundaries
+MAIN_MENU_BOUNDARIES = Community Areas
 MAIN_MENU_LIST = List
 MAIN_MENU_PUBLIC_DISPLAY_MAP = Public Display (Map)
 MAIN_MENU_PUBLIC_DISPLAY_OWNERS = Public Display (Owners)
@@ -380,20 +380,20 @@ CLAIM_SPLIT_SUCCESS = Claim has been successfully split. Click on the claims bel
 
 
 
-BOUNDARIES_PAGE_TITLE = Boundaries List
+BOUNDARIES_PAGE_TITLE = Community Area List
 BOUNDARIES_PAGE_NAME = Name
-BOUNDARIES_PAGE_AUTHORITY = Authority
+BOUNDARIES_PAGE_AUTHORITY = Custodian
 BOUNDARIES_PAGE_TYPE = Type
-BOUNDARIES_PAGE_PARENT = Parent Boundary
+BOUNDARIES_PAGE_PARENT = Parent
 
-BOUNDARY_PAGE_TITLE = %s %s Boundary
-BOUNDARY_PAGE_TITLE_NEW = Boundary - New
-BOUNDARY_PAGE_SAVED = Boundary has been saved successfully
-BOUNDARY_PAGE_APPROVED = Boundary has been approved
-BOUNDARY_PAGE_DELETED = Boundary has been deleted
+BOUNDARY_PAGE_TITLE = %s %s Community Area
+BOUNDARY_PAGE_TITLE_NEW = New
+BOUNDARY_PAGE_SAVED = Community Area has been saved successfully
+BOUNDARY_PAGE_APPROVED = Community Area has been approved
+BOUNDARY_PAGE_DELETED = Community Area has been deleted
 BOUNDARY_PAGE_APPROVE = Approve
-BOUNDARY_PAGE_APPROVE_WARNING = You are going to approve boundary.\\r\\nAfter this action, no further changes will be possible.\\r\\nDo you want to continue?
-BOUNDARY_PAGE_DELETE_WARNING = You are going to delete boundary.\\r\\nAfter this action, boundary information will be lost.\\r\\nDo you want to continue?
+BOUNDARY_PAGE_APPROVE_WARNING = You are going to approve Community Area.\\r\\nAfter this action, no further changes will be possible.\\r\\nDo you want to continue?
+BOUNDARY_PAGE_DELETE_WARNING = You are going to delete Community Area.\\r\\nAfter this action, area information will be lost.\\r\\nDo you want to continue?
 
 BOUNDARY_PRINT_PAGE_MAP_PARAMS = Map Parameters
 BOUNDARY_PRINT_PAGE_PAPER_SIZE = Paper Size
