boundary to community area labels

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
@@ -285,7 +285,7 @@ MAP_CONTROL_GOOGLE_MAP = Google Map
 MAP_CONTROL_GOOGLE_EARTH = Google Earth
 MAP_CONTROL_BING_AREAL = Bing Areal
 MAP_CONTROL_SNAP_SELECT = Add to snapping
-MAP_CONTROL_CURRENT_BOUNDARY = Current boundary
+MAP_CONTROL_CURRENT_BOUNDARY = Current Community area
 MAP_CONTROL_TYPE = Type
 MAP_CONTROL_PARENT = Parent
 
