Intermediate changes, fixing number of bugs

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
@@ -150,6 +150,9 @@ CLAIM_PAGE_STATUS = Status
 CLAIM_PAGE_RECORDER = Recorder
 CLAIM_PAGE_CHALLENGED_CLAIM = Challenged claim
 CLAIM_PAGE_CHALLENGING_CLAIMS = Challenging claims
+CLAIM_PAGE_CHALLENGE_TYPE = Challenge type
+CLAIM_PAGE_CHALLENGED = Challenged
+CLAIM_PAGE_CHALLENGING = Challenging
 CLAIM_PAGE_CLAIMANT_NAME = Name
 CLAIM_PAGE_CLAIMANT_GROUP_NAME = Name
 CLAIM_PAGE_CLAIMANT_LAST_NAME = Last name
