--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
@@ -3,6 +3,7 @@ GENERAL_APP_NAME = SOLA Community Server
 GENERAL_HEADER_CAPTION = SOLA COMMUNITY SERVER
 GENERAL_VERSION = 1.4
 GENERAL_LABEL_SAVE = Save
+GENERAL_LABEL_DONE = Done
 GENERAL_LABEL_BACK = Back
 GENERAL_LABEL_CANCEL = Cancel
 GENERAL_LABEL_CLOSE = Close
