Introducing Import Polygon feature on the CS map control.

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages.properties
@@ -273,6 +273,14 @@ MAP_CONTROL_ZOOM_IN = Zoom in
 MAP_CONTROL_ZOOM_OUT = Zoom out
 MAP_CONTROL_EDIT_MAP = Edit map
 MAP_CONTROL_DRAW_POLYGON = Draw polygon
+MAP_CONTROL_IMPORT_POINTS = Import polygon
+MAP_CONTROL_IMPORT = Import
+MAP_CONTROL_POINTS_TYPE = Points type
+MAP_CONTROL_POINTS = Points
+MAP_CONTROL_CRS = CRS
+MAP_CONTROL_WKT = Well-known text (WKT)
+MAP_CONTROL_COMMA_SEPARATED = Comma-separated (,)
+MAP_CONTROL_SEMICOLON = Semicolon (;)
 MAP_CONTROL_DRAW_LINE = Draw line
 MAP_CONTROL_DRAW_POINT = Draw point
 MAP_CONTROL_EDIT_SHAPE = Edit shape
