Updates to Spanish translation

--- a/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages_es_ES.properties
+++ b/web/src/main/resources/org/sola/opentenure/services/boundary/web/messages_es_ES.properties
@@ -130,7 +130,7 @@ CLAIM_SEARCH_NUMBER = solicitud #
 CLAIM_SEARCH_DESCRIPTION = Descripci\u00f3n
 CLAIM_SEARCH_LODGING_DATE_FROM = Fecha de registro (desde)
 CLAIM_SEARCH_LODGING_DATE_TO = Fecha de registro (hasta)
-CLAIM_SEARCH_CLAIMANT_NAME = Nombre del reclamante
+CLAIM_SEARCH_CLAIMANT_NAME = Nombre del Solicitante
 CLAIM_SEARCH_CHALLENGE_EXPIRATION = Fecha de expiraci\u00f3n del situacion a resolver
 CLAIM_SEARCH_LODGING_DATE = Fecha de registro
 CLAIM_SEARCH_NOTHING_FOUND = No se encontr\u00f3 nada. Por favor, refine sus criterios de b\u00fasqueda.
@@ -139,7 +139,7 @@ CLAIM_SEARCH_NOTHING_FOUND = No se encontr\u00f3 nada. Por favor, refine sus cri
 CLAIM_PAGE_TITLE = solicitud #%s
 CLAIM_PAGE_CHALLENGE_TITLE = situacion a resolver de solicitud #%s
 CLAIM_PAGE_GENERAL = General
-CLAIM_PAGE_CLAIMANT = Reclamante
+CLAIM_PAGE_CLAIMANT = Solicitante
 CLAIM_PAGE_ATTACHMENTS = Adjuntos
 CLAIM_PAGE_ATTACHMENT = Adjunto
 CLAIM_PAGE_MAP = Mapa
@@ -152,7 +152,7 @@ CLAIM_PAGE_ISSUANCE_DATE = Fecha de emisi\u00f3n
 CLAIM_PAGE_STATUS = Estado
 CLAIM_PAGE_RECORDER = Registrador
 CLAIM_PAGE_CHALLENGED_CLAIM = solicitud desafiado
-CLAIM_PAGE_CHALLENGING_CLAIMS = solicituds desafiantes
+CLAIM_PAGE_CHALLENGING_CLAIMS = solicitudes desafiantes
 CLAIM_PAGE_CHALLENGE_TYPE = Tipo de situacion a resolver
 CLAIM_PAGE_CHALLENGED = Desafiado
 CLAIM_PAGE_CHALLENGING = Desafiante
@@ -189,8 +189,8 @@ CLAIM_PAGE_REVERT_REVIEW_WARNING = Va a revertir la revisi\u00f3n de este solici
 CLAIM_PAGE_SUBMIT_WARNING = Va a enviar el solicitud para revisi\u00f3n p\u00fablica.\\r\\n\u00bfDesea continuar?
 CLAIM_PAGE_APPROVE_MODERATION_WARNING = Va a aprobar la moderaci\u00f3n de este solicitud.\\r\\nDespu\u00e9s de esta acci\u00f3n, no se podr\u00e1n realizar m\u00e1s cambios.\\r\\n\u00bfDesea continuar?
 CLAIM_PAGE_REJECT_WARNING = Va a rechazar este solicitud.\\r\\nAntes de rechazarlo, no olvide agregar un comentario describiendo la raz\u00f3n.\\r\\nNo se podr\u00e1n realizar m\u00e1s cambios. \u00bfDesea continuar?
-CLAIM_PAGE_WITHDRAW_WARNING = Vas a retirar esta reclamaci\u00f3n.\\r\\nNo se podr\u00e1n hacer m\u00e1s cambios. \u00bfQuieres continuar?
-CLAIM_PAGE_UNASSIGN_WARNING = Vas a desasignar esta reclamaci\u00f3n.\\r\\n\u00bfQuieres continuar?
+CLAIM_PAGE_WITHDRAW_WARNING = Vas a retirar esta Solicitud.\\r\\nNo se podr\u00e1n hacer m\u00e1s cambios. \u00bfQuieres continuar?
+CLAIM_PAGE_UNASSIGN_WARNING = Vas a desasignar esta Solicitud.\\r\\n\u00bfQuieres continuar?
 CLAIM_PAGE_ASSIGNEE = Persona asignada
 CLAIM_PAGE_START_DATE = Ocupado desde
 CLAIM_PAGE_LAND_USE = Uso del terreno
@@ -207,15 +207,15 @@ CLAIM_PAGE_ENTITY = Entidad legal
 CLAIM_PAGE_COMMENT = Comentario
 CLAIM_PAGE_COMMENT_USER = Autor
 CLAIM_PAGE_COMMENT_TIME = Hora
-CLAIM_PAGE_ASSIGNED_TO_YOU = La reclamaci\u00f3n ha sido asignada a ti
-CLAIM_PAGE_UNASSIGNED = La reclamaci\u00f3n ha sido desasignada
-CLAIM_PAGE_REJECTED = La reclamaci\u00f3n ha sido rechazada
-CLAIM_PAGE_APPROVED_FOR_REVIEW = La revisi\u00f3n de la reclamaci\u00f3n ha sido aprobada
-CLAIM_PAGE_APPROVED_MODERATION = La moderaci\u00f3n de la reclamaci\u00f3n ha sido aprobada
-CLAIM_PAGE_WITHDRAWN = La reclamaci\u00f3n ha sido retirada
+CLAIM_PAGE_ASSIGNED_TO_YOU = La Solicitud ha sido asignada a ti
+CLAIM_PAGE_UNASSIGNED = La Solicitud ha sido desasignada
+CLAIM_PAGE_REJECTED = La Solicitud ha sido rechazada
+CLAIM_PAGE_APPROVED_FOR_REVIEW = La revisi\u00f3n de la Solicitud ha sido aprobada
+CLAIM_PAGE_APPROVED_MODERATION = La moderaci\u00f3n de la Solicitud ha sido aprobada
+CLAIM_PAGE_WITHDRAWN = La Solicitud ha sido retirada
 CLAIM_PAGE_ESTABLISHMENT_DATE = Fecha de establecimiento
 CLAIM_PAGE_REGISTRATION_NUMBER = N\u00famero de registro
-CLAIM_PAGE_REJECT_CLAIM = Rechazar reclamaci\u00f3n
+CLAIM_PAGE_REJECT_CLAIM = Rechazar Solicitud
 CLAIM_PAGE_ADD_COMMENT = Agregar comentario
 CLAIM_PAGE_ADD_SHARE = Agregar participaci\u00f3n
 CLAIM_PAGE_ADD_PERSON = Agregar persona
@@ -224,7 +224,7 @@ CLAIM_PAGE_COMMENT_TEXT = Texto del comentario
 CLAIM_PAGE_CONFIRM_DELETE_COMMENT = \u00bfEst\u00e1s seguro de que quieres eliminar el comentario?
 CLAIM_PAGE_CONFIRM_DELETE_ATTACHMENT = \u00bfEst\u00e1s seguro de que quieres eliminar el archivo adjunto?
 CLAIM_PAGE_ADD_ATTACHMENT = agregar archivo adjunto
-CLAIM_PAGE_SAVED = La reclamaci\u00f3n ha sido guardada
+CLAIM_PAGE_SAVED = La Solicitud ha sido guardada
 CLAIM_PAGE_TYPE = Tipo
 CLAIM_PAGE_NUMERATOR = Numerador
 CLAIM_PAGE_DENOMINATOR = Denominador
@@ -232,17 +232,17 @@ CLAIM_PAGE_DELETE_OWNER_WARNING = \u00bfEst\u00e1s seguro de que quieres elimina
 CLAIM_PAGE_DELETE_SHARE_WARNING = \u00bfEst\u00e1s seguro de que quieres eliminar la participaci\u00f3n?
 CLAIM_PAGE_REJECTION_REASON = Motivo del rechazo
 CLAIM_PAGE_HIDDEN = oculto
-CLAIM_PAGE_SUBMITTED = La reclamaci\u00f3n ha sido enviada
-CLAIM_PAGE_REVERTED = La revisi\u00f3n de la reclamaci\u00f3n ha sido revertida
-CLAIM_PAGE_ISSUED = La reclamaci\u00f3n ha sido emitida
-CLAIM_PAGE_COPY_FROM_CLAIMANT = Copiar del reclamante
+CLAIM_PAGE_SUBMITTED = La Solicitud ha sido enviada
+CLAIM_PAGE_REVERTED = La revisi\u00f3n de la Solicitud ha sido revertida
+CLAIM_PAGE_ISSUED = La Solicitud ha sido emitida
+CLAIM_PAGE_COPY_FROM_CLAIMANT = Copiar del Solicitante
 CLAIM_PAGE_PARCEL = Parcela
 CLAIM_PAGE_RIGHT_TYPE = Tipo de derecho
 CLAIM_PAGE_SIGNATURE = Firma
 CLAIM_PAGE_DATE = Fecha
-CLAIM_PAGE_CLAIM = Reclamaci\u00f3n
-CLAIM_PAGE_CLAIM_NAME = Nombre de la reclamaci\u00f3n
-CLAIM_PAGE_CLAIM_TYPE = Tipo de reclamaci\u00f3n
+CLAIM_PAGE_CLAIM = Solicitud
+CLAIM_PAGE_CLAIM_NAME = Nombre de la Solicitud
+CLAIM_PAGE_CLAIM_TYPE = Tipo de Solicitud
 CLAIM_PAGE_DOCUMENT = Documento
 CLAIM_PAGE_ADD_DOCUMENT = Agregar documento
 CLAIM_PAGE_SHARES = Participaciones
@@ -253,7 +253,7 @@ CLAIM_PAGE_RIGHTS_TRANSFERRED = Los derechos de propiedad han sido transferidos
 CLAIM_PAGE_LOCATION = Ubicaci\u00f3n
 
 # Claim search
-CLAIM_SEARCH_PAGE_TITLE = B\u00fasqueda de reclamaci\u00f3n
+CLAIM_SEARCH_PAGE_TITLE = B\u00fasqueda de Solicitud
 
 # Map
 MAP_PAGE_TITLE = Mapa
@@ -262,11 +262,11 @@ MAP_PAGE_TITLE = Mapa
 MAP_CONTROL_LOADING = Cargando...
 MAP_CONTROL_NOTHING_FOUND = No se encontr\u00f3 nada
 MAP_CONTROL_INFO = Informaci\u00f3n
-MAP_CONTROL_CLAIMANT = Reclamante:
+MAP_CONTROL_CLAIMANT = Solicitante:
 MAP_CONTROL_LODGED = Registrado:
 MAP_CONTROL_STATUS = Estado:
 MAP_CONTROL_LOCATIONS_LAYER_TITLE = Ubicaciones adicionales
-MAP_CONTROL_CURRENT_CLAIM = Reclamaci\u00f3n actual
+MAP_CONTROL_CURRENT_CLAIM = Solicitud actual
 MAP_CONTROL_COMMUNITY_LAYER_NAME = \u00c1rea comunitaria
 MAP_CONTROL_LAYERS = Capas
 MAP_CONTROL_ZOOM_TO_EXTENT = Ajustar al l\u00edmite
@@ -323,11 +323,11 @@ DASHBOARD_PAGE_ASSIGNED_CLAIMS_EMPTY = No se encontraron reclamaciones asignadas
 DASHBOARD_PAGE_CLAIMS_FOR_REVIEW_EMPTY = No se encontraron reclamaciones para revisi\u00f3n
 DASHBOARD_PAGE_CLAIMS_FOR_MODERATION_EMPTY = No se encontraron reclamaciones para moderaci\u00f3n
 
-# P\u00e1gina de carga de reclamaci\u00f3n
-CLAIM_UPLOAD_PAGE_TITLE = Carga de reclamaci\u00f3n
-CLAIM_UPLOAD_PAGE_CLAIM_FILE = Archivo de reclamaci\u00f3n (zip)
+# P\u00e1gina de carga de Solicitud
+CLAIM_UPLOAD_PAGE_TITLE = Carga de Solicitud
+CLAIM_UPLOAD_PAGE_CLAIM_FILE = Archivo de Solicitud (zip)
 CLAIM_UPLOAD_PAGE_FILE_PASSWORD = Contrase\u00f1a de archivo
-CLAIM_UPLOAD_PAGE_SUCCESS_UPLOAD = La reclamaci\u00f3n se ha cargado correctamente. Puede revisar los detalles en %s
+CLAIM_UPLOAD_PAGE_SUCCESS_UPLOAD = La Solicitud se ha cargado correctamente. Puede revisar los detalles en %s
 
 CLAIM_PAGE_PRINT_GENERATED_ON = generado en:
 
@@ -380,16 +380,16 @@ MORTGAGE_DETAILS = Detalles del pr\u00e9stamo
 MORTGAGE_REGISTERED = El pr\u00e9stamo se ha registrado exitosamente.
 
 # Fusi\u00f3n de reclamaciones
-CLAIMS_MERGE_TITLE = Fusi\u00f3n de reclamaciones
-CLAIMS_MERGE_CLAIMS_TO_MERGE = Reclamaciones para fusionar
-CLAIMS_MERGE_NEW_CLAIMS = Nuevas reclamaciones
-CLAIMS_MERGE_SUCCESS = Las reclamaciones se han fusionado exitosamente. Haga clic en las reclamaciones a continuaci\u00f3n para revisar el resultado.
-CLAIMS_MERGE_CONFIRM = \u00bfEst\u00e1 seguro? Las reclamaciones antiguas pasar\u00e1n a ser hist\u00f3ricas.
+CLAIMS_MERGE_TITLE = Fusi\u00f3n de Solicitudes
+CLAIMS_MERGE_CLAIMS_TO_MERGE = Solicitudes para fusionar
+CLAIMS_MERGE_NEW_CLAIMS = Nuevas Solicitudes
+CLAIMS_MERGE_SUCCESS = Las Solicitudes se han fusionado exitosamente. Haga clic en las Solicitudes a continuaci\u00f3n para revisar el resultado.
+CLAIMS_MERGE_CONFIRM = \u00bfEst\u00e1 seguro? Las Solicitudes antiguas pasar\u00e1n a ser hist\u00f3ricas.
 
-# Divisi\u00f3n de reclamaci\u00f3n
-CLAIM_SPLIT_TITLE = Divisi\u00f3n de reclamaci\u00f3n
-CLAIM_SPLIT_CLAIM_TO_SPLIT = Reclamaci\u00f3n a dividir
-CLAIM_SPLIT_SUCCESS = La reclamaci\u00f3n ha sido dividida exitosamente. Haga clic en las reclamaciones a continuaci\u00f3n para revisar el resultado.
+# Divisi\u00f3n de Solicitud
+CLAIM_SPLIT_TITLE = Divisi\u00f3n de Solicitud
+CLAIM_SPLIT_CLAIM_TO_SPLIT = Solicitud a dividir
+CLAIM_SPLIT_SUCCESS = La Solicitud ha sido dividida exitosamente. Haga clic en las Solicitudes a continuaci\u00f3n para revisar el resultado.
 
 BOUNDARIES_PAGE_TITLE = Lista de \u00e1reas comunitarias
 BOUNDARIES_PAGE_NAME = Nombre
@@ -421,6 +421,6 @@ BOUNDARY_PRINT_PAGE_Y = Y
 
 # P\u00e1gina de impresi\u00f3n de exhibici\u00f3n p\u00fablica
 PUBLIC_DISPLAY_PAGE_TITLE = Exhibici\u00f3n p\u00fablica
-PUBLIC_DISPLAY_PAGE_CLAIMS_BY = Mostrar reclamaciones por:
+PUBLIC_DISPLAY_PAGE_CLAIMS_BY = Mostrar Solicitudes por:
 PUBLIC_DISPLAY_PAGE_ALL = Todas
 PUBLIC_DISPLAY_PAGE_PRINT_PARAMS = Par\u00e1metros de impresi\u00f3n
